// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
<head>
  <style
    data-emotion="css-global"
  >
    
  </style>
  <style
    data-emotion="css"
  >
    
  </style>
</head>
`;

exports[`basic 2`] = `
<body>
  <div
    id="root"
  >
    <div
      class="css-1lrxbo5"
    />
  </div>
</body>
`;

exports[`basic 4`] = `
<head>
  <style
    data-emotion="css"
  >
    
  </style>
</head>
`;

exports[`basic 5`] = `
<body>
  <div
    id="root"
  />
</body>
`;
